acs: fix remaining contrast error on index

--- a/styles.css
+++ b/styles.css
@@ -255,7 +255,7 @@ code {
     font-size: 17px;
     cursor: pointer;
     background: none;
-    color: grey;
+    color: #757575;
     margin: 0px 10px;
 }
 
